--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
     "js-base64": "^2.5.1",
     "log-timestamp": "^0.3.0",
+    "node-localstorage": "^2.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
