--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "file-loader": "^5.1.0",
     "fs": "0.0.1-security",
+    "image-webpack-loader": "^6.0.0",
     "js-base64": "^2.5.1",
     "log-timestamp": "^0.3.0",
     "node-localstorage": "^2.1.5",
